# Lexiq-AI

./: .gitignore  .last-image-tag  CONTRIBUTING.md  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml
apps/api-core/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api-core/migrations/: env.py
apps/api-core/migrations/versions/: 079cc6bea3d5_add_webhook_subscription_fields.py  2411b62ce18c_firms.py  3d14f2c29b60_appointments_calendar.py  427c9a86caf6_initial_schema.py  5d3b9c1a2e4f_add_leads_table.py  8f7a6b5c4d3e_add_notifications_table.py  9c1e8a2f3b1a_add_appointments_table.py  a1b2c3d4e5f6_add_firms_table_and_user_firm_id.py  a7b8c9d0e1f2_add_appointment_source_tracking.py  c1d2e3f4g5h6_add_client_memory_tables.py  d1e29cee7893_add_twilio_phone_to_firms.py  d4e5f6a7b8c9_add_firm_personas_table.py  e5f6a7b8c9d0_add_agent_configs_table.py  f6ce49e58caf_add_calendar_integrations_table.py  g1h2i3j4k5l6_add_google_auth_fields.py  h7i8j9k0l1m2_add_account_lockout_fields.py  i8j9k0l1m2n3_remove_unique_constraint_from_firm_name.py  j9k0l1m2n3o4_add_stripe_customer_id_to_users.py  k0l1m2n3o4p5_seed_subscription_plans.py  l1m2n3o4p5q6_add_usage_record_composite_index.py  m2n3o4p5q6r7_add_plan_minutes_fields.py  n3o4p5q6r7s8_add_phone_number_pool_table.py
apps/api-core/src/api_core/: __init__.py  celery_client.py  config.py  dependencies.py  exceptions.py  main.py  middleware.py
apps/api-core/src/api_core/auth/: __init__.py  azure_ad.py  dependencies.py  google_oauth.py  internal_service.py  jwt.py  token_validator.py
apps/api-core/src/api_core/clients/: __init__.py  cognitive_orch_client.py
apps/api-core/src/api_core/database/: __init__.py  connection.py  models.py  session.py
apps/api-core/src/api_core/models/: appointments.py  auth.py  billing.py  calls.py  common.py  conversations.py  dashboard.py  firms.py  knowledge.py  leads.py  notifications.py  user.py
apps/api-core/src/api_core/repositories/: __init__.py  agent_repository.py  appointments_repository.py  base.py  billing_repository.py  calendar_integration_repository.py  calls_repository.py  conversations_repository.py  firms_repository.py  knowledge_repository.py  leads_repository.py  notifications_repository.py  phone_number_pool_repository.py  user_repository.py
apps/api-core/src/api_core/services/: __init__.py  agent_service.py  appointments_service.py  auth_service.py  billing_service.py  calendar_integration_service.py  calls_service.py  conversations_service.py  dashboard_service.py  firms_service.py  ingestion_queue.py  knowledge_service.py  leads_service.py  notifications_service.py  orphan_cleanup_service.py  qdrant_service.py  rate_limit_service.py  redis_cleanup_service.py  storage_service.py  stripe_service.py  terminate_account_service.py  trial_service.py  twilio_service.py  user_service.py
apps/api-core/src/api_core/utils/: __init__.py  helpers.py  logging.py  monitoring.py
apps/api-core/tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_auth_service.py  test_billing.py  test_calendar_webhook_delete.py  test_cognitive_orch_client.py  test_config.py  test_dashboard.py  test_database.py  test_exceptions.py  test_firms_phone_numbers.py  test_internal_auth.py  test_jwt.py  test_redis_cleanup_service.py  test_terminate_account_service.py  test_twilio_webhook_security.py  test_user_or_internal_auth.py  test_users.py
apps/cognitive-orch/: .gitignore  README.md  README_MEMORY.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/cognitive-orch/docs/: ENHANCED_CLIENT_MODEL.md
apps/cognitive-orch/src/cognitive_orch/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py
apps/cognitive-orch/src/cognitive_orch/api/: __init__.py
apps/cognitive-orch/src/cognitive_orch/auth/: __init__.py  internal_service.py
apps/cognitive-orch/src/cognitive_orch/clients/: __init__.py  api_core_client.py
apps/cognitive-orch/src/cognitive_orch/examples/: client_info_collection.py
apps/cognitive-orch/src/cognitive_orch/grpc/: README.md  __init__.py  handlers.py  server.py
apps/cognitive-orch/src/cognitive_orch/models/: chat.py  conversation.py  conversation_api.py  tools.py
apps/cognitive-orch/src/cognitive_orch/services/: llm_service.py  memory_integration_example.py  memory_service.py  post_call_worker.py  prompt_builder.py  prompt_service.py  state_service.py  tool_loop_service.py  tool_service.py
apps/cognitive-orch/src/cognitive_orch/tools/: __init__.py  client_info_tools.py
apps/cognitive-orch/src/cognitive_orch/utils/: errors.py  logging.py
apps/cognitive-orch/tests/: __init__.py  conftest.py  test_api_core_client.py  test_internal_auth.py  test_llm_service.py  test_memory_services.py  test_state_service.py
apps/document-ingestion/: README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/document-ingestion/src/document_ingestion/: __init__.py  config.py  main.py
apps/document-ingestion/src/document_ingestion/api/: __init__.py
apps/document-ingestion/src/document_ingestion/clients/: api_core_client.py
apps/document-ingestion/tests/: __init__.py  test_api_core_client.py  test_chunking_service.py
apps/integration-worker/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_celery.py  verify_setup.py
apps/integration-worker/src/integration_worker/: __init__.py  celery_app.py  config.py  main.py
apps/integration-worker/tests/: README.md  __init__.py  conftest.py  test_celery_app.py  test_config.py
apps/integration-worker/tests/test_clients/: __init__.py
apps/integration-worker/tests/test_database/: __init__.py  test_repositories.py
apps/integration-worker/tests/test_models/: __init__.py  test_sync_result.py
apps/integration-worker/tests/test_services/: test_outlook_service.py
apps/integration-worker/tests/test_tasks/: test_calendar_sync.py  test_token_refresh.py  test_webhook_processing.py
apps/integration-worker/tests/test_utils/: test_errors.py  test_logging.py
docker/: README.md
(+390 files in other folders)
