[tool.poetry]
name = "api-core"
version = "0.1.0"
description = "LexiqAI API Core Service - Authentication, user management, billing, and dashboard APIs"
authors = ["LexiqAI Team"]
readme = "README.md"
packages = [{include = "api_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
redis = "^5.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.3.0"  # Pin to 4.3.0 to avoid compatibility issues with bcrypt 5.0.0
httpx = "^0.25.2"
msal = "^1.28.0"  # Microsoft Authentication Library for Outlook calendar OAuth
email-validator = "^2.1.0"
azure-storage-blob = "^12.19.0"  # Azure Blob Storage SDK for file uploads
aiohttp = "^3.9.1"  # Required for async Azure Blob Storage client
python-multipart = "^0.0.6"  # Required for FastAPI file uploads
aio-pika = "^9.2.1"  # RabbitMQ publishing (document ingestion jobs)

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "azure.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=api_core",
    "--cov-report=term-missing",
    "--cov-report=html",
]
