[tool.poetry]
name = "cognitive-orch"
version = "0.1.0"
description = "LexiqAI Cognitive Orchestrator Service - LLM routing, RAG, and conversation state management"
authors = ["LexiqAI Team"]
readme = "README.md"
packages = [{include = "cognitive_orch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
protobuf = ">=4.21.6,<5.0"  # Must match gencode version from grpcio-tools 1.62.0
litellm = "^1.34.0"
redis = {extras = ["hiredis"], version = "^5.0.3"}
qdrant-client = "^1.8.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
python-json-logger = "^2.0.7"
sqlalchemy = "^2.0.23"  # ORM for PostgreSQL (client metadata)
asyncpg = "^0.29.0"  # Async PostgreSQL driver

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "grpc.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cognitive_orch",
    "--cov-report=term-missing",
    "--cov-report=html",
]

