[tool.poetry]
name = "document-ingestion"
version = "0.1.0"
description = "LexiqAI Document Ingestion Service - Processes knowledge base files for RAG"
authors = ["LexiqAI Team"]
readme = "README.md"
packages = [{include = "document_ingestion", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pika = "^1.3.2"
aio-pika = "^9.2.1"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"
tiktoken = "^0.5.2"
openai = "^1.12.0"
qdrant-client = "^1.8.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "aio_pika.*",
    "pika.*",
    "qdrant_client.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=document_ingestion",
    "--cov-report=term-missing",
    "--cov-report=html",
]

