[tool.poetry]
name = "integration-worker"
version = "0.1.0"
description = "LexiqAI Integration Worker - Background job processing for calendar sync and CRM integration"
authors = ["LexiqAI Team"]
readme = "README.md"
packages = [{include = "integration_worker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Shared Database Models (from api-core monorepo)
api-core = {path = "../api-core", develop = true}  # Editable install for shared models
celery = "^5.3.0"                    # Task queue
redis = "^5.0.1"                     # Message broker and result backend
sqlalchemy = "^2.0.23"               # Database ORM
greenlet = "^2.0.0"                 # Required for SQLAlchemy async functionality
asyncpg = "^0.29.0"                  # PostgreSQL async driver
psycopg2-binary = "^2.9.9"           # PostgreSQL sync driver
pydantic = "^2.5.0"                  # Data validation
pydantic-settings = "^2.1.0"         # Settings management
httpx = "^0.25.2"                    # HTTP client
msal = "^1.31.0"                     # Microsoft Authentication Library
google-auth-oauthlib = "^1.2.1"      # Google OAuth flow
google-auth = "^2.35.0"              # Google OAuth (latest stable)
google-api-python-client = "^2.115.0"  # Google Calendar API
tenacity = "^8.2.3"                  # Retry logic
python-dotenv = "^1.0.0"             # Environment variables
fastapi = "^0.104.0"                 # FastAPI for webhook server
uvicorn = {extras = ["standard"], version = "^0.24.0"}  # ASGI server

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
pytest-celery = "^0.0.0"             # Celery testing
pytz = "^2023.3"                      # Timezone support for tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

